# Pythonic-DISORT_inhomogeneous_atmosphere

./: .gitignore  AGENT_all125_fr.md  AGENT_all125_ic.md  AGENT_all125_ic_REPORT.md  AGENT_all125_rad.md  AGENT_batch3_postmortem.md  AGENT_gpu_probe.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  FR_CHECKPOINT_RESUME_PLAN.md  LICENSE.md  README.md  STRATEGY_hpc_retrieval_runs.md  STREAMLINE.md  _fr_all125_cpu.sbatch  _fr_coretest.sbatch  _fr_gate.sbatch  _fr_gold49_gpu.sbatch  _fr_golden_compare.py  _fr_gpu_realloc.sbatch  _fr_l2_test.py  _fr_l2_test.sbatch  _fr_l2_test_gpu.sbatch  _fr_resume_test.py  _fr_resume_test.sbatch  adiabatic_cloud_with_drizzle.ipynb  fable_assessment_2026-07-01.md  pyproject.toml  report_magnus_thick_atmosphere.tex  report_riccati_solver.tex  report_star_product_magnus.tex
.claude/: settings.local.json
docs/: DESIGN_DECISIONS.md  GenIntGrid_ener_dir_mie.py  OUTSTANDING.md  Pythonic-DISORT.ipynb  conf.py  filter_threshold_sweep.json  jacobian_decomposition.ipynb  joint_osse_results.json  riccati_solver.md  riccati_solver_VOCALS_retrieval.ipynb  riccati_solver_VOCALS_retrieval_mu0p9.ipynb  riccati_solver_intro.ipynb  subadiabatic_thin_results.json  thin_top_resolution_results.json
pydisotest/: 1_test.ipynb  2_test.ipynb  3_test.ipynb  4_test.ipynb  5_test.ipynb  7_test.ipynb  8_test.ipynb  9_test.ipynb
src/: _domain_decomposition.py  _magnus_propagator.py  _riccati_solver.py  _riccati_solver_jax.py  _ros2_riccati.py  _solve_bc_magnus_jax.py  _solve_bc_riccati_jax.py  info_content.py  noise_model.py  optics_table.py  pydisort_magnus.py  (+4 more)
(+169 files in other folders)
