[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydisort-riccati-jax"
version = "0.1.0"
description = "Differentiable (JAX) invariant-imbedding Riccati RT solver for inhomogeneous atmospheres."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Dion J. X. Ho", email = "dh3065@columbia.edu" },
]
license = { text = "MIT" }
dependencies = [
  "numpy",
  "scipy",
  "jax",
  "diffrax",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
# PythonicDISORT supplies the reference solver used by the test suite.
test = ["pytest>=6.2.5", "PythonicDISORT"]

[project.urls]
Homepage = "https://github.com/dhjx1996/Pythonic-DISORT_inhomogeneous_atmosphere"

# The solver is three flat modules under src/ (added to sys.path by tests/conftest.py).
[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["pydisort_riccati_jax", "_riccati_solver_jax", "_solve_bc_riccati_jax"]
